--- a/src/components/teamtable.css
+++ b/src/components/teamtable.css
@@ -1,3 +1,13 @@
+@media screen and (max-width: 800px) {
+  table{
+    font-size: 12px !important;
+  }
+
+  td{
+    width: 20px;
+  }
+}
+
 .team-table {
   height: 600px;
   overflow-y: scroll;
