--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 500px) {
+  body{
+  background-position-x: -650px;
+  }
+}
+
 body {
   background-image: url(./images/kb.jpg);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
